package hankstodo_app;

import "protostuff-default.proto";

option java_package = "hankstodo.app";

message TodoListManager {
  optional string sid = 1;
  optional net_webby_protostuff_runtime.MapObjectObject todoLists = 2;
}

message newTodo {
  optional string arg0 = 1;
}

